tests/paczka1/small_fuzzy/16350348.err
Error in line 5: EeK584t S428 12,3
Error in line 7: EeK584t S843 25,6
Error in line 10: RA8B8ie S84 78,5
